2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added InItemsControlSimple.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxTest.cs, ListBoxItemTest.cs: Added.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded MultipleColumnSpanStar test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added StarSizingWithMinimumMaximumMeasure test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidth3 test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidth2 test.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MeasureConstraint* tests.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added GetVisualChildOutOfRange test.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MultipleColumnSpan* tests.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidthMeasureConstraint test.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidth, MaxWidth tests.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* RowDefinitionTest.cs: Added.
	* ColumnDefinitionTest.cs, GridTest.cs: Added tests.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Disabled a buggy test.
	
2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonTest.cs: Disabled a buggy test.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionTest.cs: Added.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added or expanded tests.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionCollectionTest.cs: Added.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added GridRow* tests.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added or expanded tests.
